# wtf-m4st

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crews/: bugfix_crew.py  content_crew.py  nightly_crew.py  reporting.py
dashboard/: index.html  vite.config.js
dashboard/src/: App.css  App.jsx  config.js  index.css
dashboard/src/components/: Badge.css  Badge.jsx  Button.css  Button.jsx  GlassCard.css  GlassCard.jsx  RamBar.css  RamBar.jsx  StatusDot.css  StatusDot.jsx  Toast.css  Toast.jsx
dashboard/src/hooks/: useCrewRunner.js  useHealth.js  useLogs.js  useRam.js  useToast.js
dashboard/src/sections/: ArchitecturePanel.css  ArchitecturePanel.jsx  CrewPanel.css  CrewPanel.jsx  Footer.css  Footer.jsx  Header.css  Header.jsx  LogsPanel.css  (+7 more)
docker/: docker-compose.yml
librechat/: librechat.yaml
openwork-mcp/: Dockerfile  main.py  requirements.txt
perplexica/: config.toml
perplexica/searxng/: settings.yml
scripts/: bootstrap_windows.ps1  check_startup.sh  check_text_encoding.py  cognee_full_reindex.py  cognee_index_changed.py  health_check.ps1  health_check.sh  health_check_full.ps1  install_mitm_cert.ps1  nightly_telegram_report.py  ram_check.sh  run_all_crews.py  run_crew.sh  setup_phase2.sh  setup_phase3_4.sh  setup_task_scheduler.ps1  setup_wsl2.sh  start_crawl.sh  start_crawl4ai.ps1  validate_env.py  verify_foundation.py
tests/: test_main.py  test_openwork_api.py
